# disability-browser

./: .gitignore  implementation_plan.md
dummy-test-site/: README.md  form-maze.html  index.html  news-wall.html  package.json  shop-clutter.html
extension/: README.md
generative-ui-london-hackathon-starter/: .env.example  CONTRACTS.md  PERCEPTUAL_DEMO.md  implementation.md  next.config.ts  pnpm-workspace.yaml
generative-ui-london-hackathon-starter/agent/: .env.example  main.py  pyproject.toml
generative-ui-london-hackathon-starter/agent/src/: catalog.py  contracts.py  dynamic_agent.py  linkup_tools.py  need_profiles.py  perceptual_agent.py
generative-ui-london-hackathon-starter/agent/tests/: conftest.py  preview_pipeline.py  test_enrich.py  test_integration.py  test_live.py  test_pure.py
generative-ui-london-hackathon-starter/agent/tests/fixtures/: sample_shop_page.json
generative-ui-london-hackathon-starter/dummy-site/: news.html  shop.html
generative-ui-london-hackathon-starter/extension/: README.md  background.js  content.js  manifest.json
generative-ui-london-hackathon-starter/extension/side-panel/: host.html  host.js  index.html  package.json  panel.js  test-panel.html  vite.config.ts
generative-ui-london-hackathon-starter/extension/src/: contracts.js  extractor.js  proxy.js
generative-ui-london-hackathon-starter/src/a2ui/: PerceptualSurface.tsx  PerceptualThemeControls.tsx  accessible.css  need-inference.ts  perceptual-theme.ts  proxy-context.tsx  refinement-session.tsx  status-bus.ts  use-perceptual-theme.tsx
shared/: contracts.ts
(+27 files in other folders)
